--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "emailjs-com": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
